--- a/forallx-adl-prooffol.tex
+++ b/forallx-adl-prooffol.tex
@@ -324,11 +324,32 @@ Let's first try to symbolise the argument. \begin{ekey}
 	\item[B]\gap{1} is a barber
 	\item[S]\gap{1} shaves \gap{2}
 \end{ekey}
-The argument then revolves around the claim that there is a barber who shaves everyone who doesn't shave themselves. Semi-formally paraphrased: someone x exists such that x is a barber and for all people y , if y does not shave themself, then x shaves y: $$\exists x (Bx \eand \forall y (\enot Syy \eif Sxy)).$$ The argument takes the form of a \emph{reductio}, so we will begin the proof by assuming this claim for the sake of argument and see what happens: \begin{proof}
+The argument then revolves around the claim that there is a barber who shaves everyone who doesn't shave themselves. Semi-formally paraphrased: someone x exists such that x is a barber and for all people y: y does not shave themselves iff x shaves y. That is: $$\exists x (Bx \eand \forall y (\enot Syy \eiff Sxy)).$$ The argument takes the form of a \emph{reductio}, so we will begin the proof by assuming this claim for the sake of argument and see what happens: \begin{proof}
 	\open
-	\hypo{a}{\exists x (Bx \eand \forall y (\enot Syy \eif Sxy))}
-	
+	\hypo{a}{\exists x (Bx \eand \forall y (\enot Syy \eiff Sxy))}
+	\open
+	\hypo{b}{(Ba \eand \forall y (\enot Syy \eiff Say))}
+	\have{c}{\forall y (\enot Syy \eiff Sxy)}\ae{b}
+	\have{d}{(\enot Saa \eiff Saa)}\Ae{c}
+	\open
+		\hypo{i}{\enot(P \eand \enot P)}
+		\open 
+		\hypo{e}{\enot Saa}
+		\have{f}{Saa}\be{d,e}
+		\have{g}{\enot Saa}\by{R}{e}
+		\close
+	\have{h}{Saa}\ne{e-f,e-g}
+	\have{k}{\enot Saa}\be{d,h}
+		\close
+	\have{l}{(P \eand \enot P)}\ne{i-h,i-k}
+	\close
+	\have{m}{(P \eand \enot P)}\Ee{a,b-l}
+	\have{n}{P}\ae{m}
+	\have{o}{\enot P}\ae{m}
+	\close
+	\have{p}{\enot \exists x (Bx \eand \forall y (\enot Syy \eiff Sxy))}\ni{a-n,a-o}
 \end{proof}
+One trick to this proof is to be sure to instantiate the universally quantified claim at line 3 by using the same name `$a$' as was already used in line 2. This is because, intuitively, the problem case for this supposed barber arises when you think about whether they shaves themselves or not. But themselves trickiest part of this proof occurs at lines 5–11. By line 4, we've already derived a contradictory biconditional. But if we just use it to derive `$Saa$' and `$\enot Saa$', the contradiction we obtain would end up involving the name `$a$'. That would mean we couldn't apply the $\exists$E rule, since the final line of the subproof would contain the chosen name, so we couldn't get our contradiction out of the subproof beginning on line 2, and hence could perform the desired \emph{reductio} on line 1 via {\enot}I. So our trick is to suppose the negation of an \emph{unrelated} contradiction on line 5, derive the contradiction from line 4 in the range of that assumption, and hence use {\enot}E to derive the contradiction `$P \eand \enot P$' on line 11. This doesn't contain the name `$a$', and hence can be extracted from the subproof to show that line 1 by itself suffices to derive a contradiction, and that shows the supposition that there is such a barber is a contradiction.
 
 
 \section{Justification of these quantifier rules}
@@ -366,15 +387,16 @@ Likewise, the notions of theoremhood, provable equivalence, and joint contrarine
 
 \practiceproblems
 \problempart
-The following two `proofs' are \emph{incorrect}. Explain why both are incorrect. Also, provide interpretations which would invalidate the fallacious argument forms the `proofs' enshrine:
-\begin{multicols}{2}
+The following three `proofs' are \emph{incorrect}. Explain why they are incorrect. If the argument `proved' is invalid, provide an interpretation which shows that the assumptions involved do not entail the conclusion:
+\begin{enumerate}
+	\item 
 	\begin{proof}
 		\hypo{Rxx}{\forall x Rxx}
 		\have{Raa}{Raa}\Ae{Rxx}
 		\have{Ray}{\forall y Ray}\Ai{Raa}
 		\have{Rxy}{\forall x \forall y Rxy}\Ai{Ray}
 	\end{proof}
-	\begin{proof}
+\item	\begin{proof}
 		\hypo{AE}{\forall x \exists y Rxy}
 		\have{E}{\exists y Ray}\Ae{AE}
 		\open
@@ -383,8 +405,26 @@ The following two `proofs' are \emph{incorrect}. Explain why both are incorrect.
 		\close
 		\have{con}{\exists x Rxx}\Ee{E, ass-Ex}
 	\end{proof}
-\end{multicols}
-
+\item \begin{proof}
+	\open\hypo{a}{\exists y \enot(Ty \eor \enot Ty)}
+	\open
+	\hypo{b}{\enot(Td \eor \enot Td)}
+	\open
+	\hypo{c}{Td}
+	\have{d}{Td \eor \enot Td}\oi{c}
+	\have{e}{\enot(Td \eor \enot Td)}\by{R}{b}
+	\close
+	\have{f}{\enot Td}\ne{c-d,c-e}
+	\have{g}{(Td \eor \enot Td)}\oi{f}
+	\have{h}{\enot(Td \eor \enot Td)}\by{R}{b}
+	\have{c2}{((Td \eor \enot Td)\eand \enot(Td \eor \enot Td))}\ai{g,h}
+	\close
+	\have{c1}{((Td \eor \enot Td)\eand \enot(Td \eor \enot Td))}\Ee{a,b-c2}
+	\close
+	\have{con}{\enot\exists y \enot(Ty \eor \enot Ty)}\ni{a-c1}
+\end{proof}
+\end{enumerate}
+\newpage
 \problempart 
 \label{pr.justifyFOLproof}
 The following three proofs are missing their commentaries (rule and line numbers). Add them, to turn them into bona fide proofs. 
@@ -513,25 +553,27 @@ For each of the following arguments: If it is valid in \FOL, give a proof. If it
 \end{earg}
 
 
-\chapter{Derived rules in \textnormal{\FOL}: conversion of quantifiers}\label{s:CQ}
+\chapter{Derived rules in \textnormal{\FOL}}\label{s:CQ}
 
 In this section, we shall add some additional rules to the basic rules of the previous section. These govern the interaction of quantifiers and negation. But they are no substantive addition to our basic rules: for each of the proposed additions, it can be shown that their role in any proof can be wholly emulated by some suitable applications of our basic rules from §\ref{s:BasicFOL}. (The point here is as in §\ref{s:Derived}.)
  
+\section{Conversion of quantifiers}\label{cq.rules}
+
 In §\ref{s:FOLBuildingBlocks}, we noted that $\enot\exists x\meta{A}$ is logically equivalent to $\forall x \enot\meta{A}$. We shall add some rules to our proof system that govern this. In particular, we add two rules, one for each direction of the equivalence:
 	\factoidbox{\begin{minipage}{0.35\textwidth}
 		\begin{proof}
 		\have[m]{a}{\forall \meta{x} \enot\meta{A}}
-		\have[\ ]{con}{\enot \exists \meta{x} \meta{A}}\cq{a}
+		\have[\ ]{con}{\enot \exists \meta{x} \meta{A}}\by{CQ$_{\forall/\enot\exists}$}{a}
 	\end{proof}
 	\end{minipage}\qquad\begin{minipage}{0.35\textwidth}
 		\begin{proof}
 		\have[m]{a}{ \enot \exists \meta{x} \meta{A}}
-		\have[\ ]{con}{\forall  \meta{x} \enot \meta{A}}\cq{a}
+		\have[\ ]{con}{\forall  \meta{x} \enot \meta{A}}\by{CQ$_{\enot\exists/\forall}$}{a}
 	\end{proof}
 	\end{minipage}
 	}
 
- Here is a schematic proof corresponding to our first CQ rule:
+ Here is a schematic proof corresponding to our first conversion of quantifiers rule, CQ$_{\forall/\enot\exists}$:
 \begin{proof}
 	\hypo{An}{\forall \meta{x} \enot \meta{A}}
 	\open
@@ -554,38 +596,80 @@ A couple of things to note about this proof. \begin{enumerate}
 	\item The sentence $\meta{B}$ cannot contain the name \meta{c} if the application of $\exists$E at line 8 is to be correct. We introduce this arbitrary contradiction precisely so we can show that the contradictoriness of our initial assumptions does not depend on the particular choice of name. The alternative would have been to show that the assumption $\meta{A}\subs{\meta{c}}{\meta{x}}$ leads to contradiction, and then applied $\enot$I – but that would have left the name \meta{c} outside the scope of a subproof and would not have allowed us to apply $\exists$E.
 \end{enumerate}
 
+A similar schematic proof could be offered for the second conversion rule, CQ$_{\enot\exists/\forall}$.
 
-Here is a schematic basic proof emulating the second CQ rule, in which some of the same issues arise:
-\begin{proof}
-	\hypo{nEna}{\exists x  \enot Ax} 
-	\open
-		\hypo{Aa}{\forall x Ax}
-		\open
-			\hypo{nac}{\enot Ac}
-			\open
-				\hypo{nb}{\enot(\meta{B}\eand\enot\meta{B})}
-				\have{a}{Ac}\Ae{Aa}
-			\close
-			\have{con}{\meta{B}\eand\enot\meta{B}}\ne{nb-nac,nb-a}
-		\close
-		\have{con1}{\meta{B}\eand\enot\meta{B}}\Ee{nEna, nac-con}
-	\close
-	\have{dada}{\enot \forall x Ax}\ni{Aa-con1}
-\end{proof}
-
-Equally, we add rules corresponding to the equivalence of $\exists\meta{x}\enot\meta{A}$ and $\enot\forall\meta{x}\meta{A}$:
+Equally, we might add rules corresponding to the equivalence of $\exists\meta{x}\enot\meta{A}$ and $\enot\forall\meta{x}\meta{A}$:
 \factoidbox{\begin{minipage}{0.35\textwidth}
 	\begin{proof}
 		\have[m]{a}{\exists \meta{x}\enot \meta{A}}
-		\have[\ ]{con}{\enot \forall \meta{x} \meta{A}}\cq{a}
+		\have[\ ]{con}{\enot \forall \meta{x} \meta{A}}\by{CQ$_{\exists/\enot\forall}$}{a}
 	\end{proof}
 \end{minipage}\qquad\begin{minipage}{0.35\textwidth}
 	\begin{proof}
 		\have[m]{a}{\enot \forall \meta{x} \meta{A}}
-		\have[\ ]{con}{\exists \meta{x} \enot \meta{A}}\cq{a}
+		\have[\ ]{con}{\exists \meta{x} \enot \meta{A}}\by{CQ$_{\enot\forall/\exists}$}{a}
 	\end{proof}
 \end{minipage}
-	}Similar schematic proofs can be offered for the other two CQ rules that show they too can be emulated using just our basic rules.
+	}
+
+Here is a schematic basic proof showing that the third conversion of quantifiers rule just introduced, CQ$_{\exists/\enot\forall}$, can be emulated just using the standard quantifier rules in combination with the other rules of our system, in which some of the same issues arise as in the earlier schematic proof: 
+\begin{proof}
+	\hypo{nEna}{\exists \meta{x}  \enot \meta{A}} 
+	\open
+		\hypo{Aa}{\forall \meta{x} \meta{A}}
+		\open
+			\hypo{nac}{\enot \meta{A}\subs{\meta{c}}{\meta{x}}}
+			\open
+				\hypo{nb}{\enot(\meta{B}\eand\enot\meta{B})}
+				\have{a}{\meta{A}\subs{\meta{c}}{\meta{x}}}\Ae{Aa}
+				\have{r}{\enot\meta{A}\subs{\meta{c}}{\meta{x}}}\by{R}{nac}
+			\close
+			\have{con}{\meta{B}\eand\enot\meta{B}}\ne{nb-a,nb-r}
+		\close
+		\have{con1}{\meta{B}\eand\enot\meta{B}}\Ee{nEna, nac-con}
+	\close
+	\have{dada}{\enot \forall \meta{x} \meta{A}}\ni{Aa-con1}
+\end{proof}
+A similar schematic proof can be offered for the final CQ rule.
+
+\section{Alternative proof system for \FOL}
+
+We saw in §\ref{s:alternates} that it is possible to formulate alternative proof systems that can nevertheless establish the same arguments are provable in \TFL. The same is true for \FOL. The idea is to get rid of the rules for one quantifier, retaining the rules governing the other quantifier, but then to take the conversion of quantifier rules as basic. 
+
+So, for example, we could consider the system which has $\exists$I and $\exists$E, and also has CQ$_{\exists/\enot\forall}$ and CQ$_{\enot\forall/\exists}$. With these rules, we can emulate $\forall$E and $\forall$I. A schematic proof showing how to emulate $\forall$E using our other basic rules is this:
+\begin{proof}
+	\have{a}{\forall \meta{x}\meta{A}}
+	\open
+	\hypo{b}{\enot\meta{A}\subs{\meta{c}}{\meta{x}}}
+	\have{c}{\exists \meta{x}\enot\meta{A}}\Ei{b}
+	\have{d}{\enot\forall \meta{x}\meta{A}}\by{CQ$_{\exists/\enot\forall}$}{c}
+	\have{e}{\forall \meta{x}\meta{A}}\by{R}{a}
+	\close
+	\have{f}{\meta{A}\subs{\meta{c}}{\meta{x}}}\ne{b-e,b-d}
+\end{proof}
+
+A schematic proof emulating $\forall$I using our other basic rules is trickier. Here it is: 
+\begin{proof}
+	\hypo{aaa}{\Gamma}
+	\have[\ ]{}{\vdots}
+	\open
+	\hypo[m]{a}{\enot\forall \meta{x}\meta{A}}
+	\have{b}{\exists \meta{x}\enot\meta{A}}\by{CQ$_{\enot\forall/\exists}$}{a}
+	\open
+	\hypo{c}{\enot\meta{A}\subs{\meta{c}}{\meta{x}}}
+	\open
+	\hypo{d}{\enot(\meta{B}\eand\enot\meta{B})}
+	\have[\ ]{}{\vdots}
+	\have[n]{e}{\meta{A}\subs{\meta{c}}{\meta{x}}}\by{Original proof from}{aaa}
+	\have{r}{\enot\meta{A}\subs{\meta{c}}{\meta{x}}}\by{R}{c}
+	\close
+	\have{f}{\meta{B}\eand\enot\meta{B}}\ne{d-e,d-r}
+	\close
+	\have{g}{\meta{B}\eand\enot\meta{B}}\Ee{b,c-f}
+	\close
+	\have{h}{\forall \meta{x}\meta{A}}\ne{a-g}
+\end{proof}
+To understand this schematic proof, what we need to remember is that, in order for the original $\forall$I rule to apply, we must already have a proof of $\meta{A}\subs{\meta{c}}{\meta{x}}$ which relies on assumptions $\Gamma$ that do not mention \meta{c} at all. The trick is to make use of that proof \emph{inside} an assumption about an existential witness. We don't try to perform that proof to derive $\meta{A}\subs{\meta{c}}{\meta{x}}$ and then attempt to manipulate $\enot\forall \meta{xA}$ to generate a contradiction. Rather, we first assume $\enot\forall \meta{xA}$, apply quantifier conversion to obtain $\exists \meta{x}\enot\meta{A}$, assume that \meta{c} witnesses that existential claim so that $\enot\meta{A}\subs{\meta{c}}{\meta{x}}$, and then use our original proof to derive $\meta{A}\subs{\meta{c}}{\meta{x}}$ at line $n$. To avoid problems with the name appearing at the bottom of the existential witness subproof, we perform the same trick of assuming the falsehood of an arbitrary contradiction (so long as \meta{B} doesn't include \meta{c}), and then we manage to derive from $\Gamma$ what we had hoped to: that $\forall \meta{xA}$.
 
 \keyideas{
 	\item The derived rules for \FOL\ concern the interaction of quantifiers with negation.
@@ -627,7 +711,7 @@ When all the quantifiers occur at the beginning of a sentence, that sentence is 
 
 
 \problempart
-Offer proofs which justify the addition of the third and fourth CQ rules as derived rules.
+Offer proofs which justify the addition of the other CQ rules as derived rules.
 
 
 
@@ -719,18 +803,52 @@ We obtain line 4 by replacing `$b$' in line 3 with `$c$'; this is justified give
 
 A relation that is reflexive, symmetric, and transitive is known as an \define{equivalence relation}. So we've proved that identity is an equivalence relation. 
 
+\subsection{Definite descriptions in proof}
 
+I want to close this section by giving an example of how proofs involving definite descriptions work. Remember from §\ref{subsec.defdesc} that we symbolised a definite description `the F is G', following Russell, as $$\exists x (\meta{F}x  \eand \forall y(\meta{F}y \eiff x=y) \eand \meta{G}x).$$ (I omit interior parentheses to aid legibility.) 
+
+Using this kind of approach, let us consider this argument: \begin{quote}
+	The F is G; the H isn't G; so the F isn't H.
+\end{quote} The argument, symbolised, looks like this: 
+\begin{align*}
+	\exists x (Fx  \eand \forall y(Fy \eiff x=y)\eand Gx),& \exists x (Hx \eand \forall y(Hy \eiff x=y) \eand \enot Gx) \\ &\proves \exists x (Fx \eand \forall y(Fy \eiff x=y)\eand \enot Hx).
+\end{align*} Here's the proof: \begin{proof}
+	\hypo{a}{\exists x (Fx  \eand \forall y(Fy \eiff x=y)\eand Gx)}
+	\hypo{b}{\exists x (Hx \eand \forall y(Hy \eiff x=y) \eand \enot Gx)}
+	\open
+	\hypo{c}{(Fa  \eand \forall y(Fy \eiff a=y)\eand Ga)}
+	\open
+	\hypo{d}{(Hb \eand \forall y(Hy \eiff b=y) \eand \enot Gb)}
+	\open
+	\hypo{e}{Ha}
+	\have{f}{\forall y(Hy \eiff b=y)}\ae{d}
+	\have{g}{(Ha \eiff b=a)}\Ae{f}
+	\have{h}{b=a}\be{g,e}
+	\have{i}{Ga}\ae{c}
+	\have{j}{\enot Gb}\ae{d}
+	\have{k}{\enot Ga}\ide{h,j}
+	\close
+	\have{l}{\enot Ha}\ni{e-i,e-k}
+	\close
+	\have{m}{\enot Ha}\Ee{b,d-l}
+	\have{n}{(Fa \eand \forall y (Fy \eiff a=y))}\ae{c}
+	\have{o}{(Fa \eand \forall y (Fy \eiff a=y) \eand \enot Ha)}\ai{n,m}
+	\have{p}{\exists x (Fx \eand \forall y (Fy \eiff x=y) \eand \enot Hx)}\Ei{o}
+	\close
+	\have{q}{\exists x (Fx \eand \forall y (Fy \eiff x=y) \eand \enot Hx)}\Ee{a,c-p}
+
+\end{proof}
 
 \keyideas{
 	\item Adding rules for identity completes our presentation of the natural deduction system for \FOL.
 	\item The identity elimination rule is basically Leibniz' Law. The idenity introduction rule expresses how trivial identity is when the same name flanks the identity symbol.
 	\item We can prove all the properties we traditionally ascribe to identity – reflexivity, symmetry, and transitivity – so identity is an equivalence relation.
 }
-
+\newpage
 \practiceproblems
 \problempart
 \label{pr.identity}
-Provide a proof of each claim.
+Provide a proof of each of the following.
 \begin{earg}
 \item $Pa \eor Qb, Qb \eif b=c, \enot Pa \proves Qc$
 \item $m=n \eor n=o, An \proves Am \eor Ao$
