--- a/forallx-adl-prooffol.tex
+++ b/forallx-adl-prooffol.tex
@@ -777,7 +777,7 @@ Having noted the symmetry of identity, note that we can use this to establish th
 	\have{e}{\meta{b}=\meta{a}}\ide{j,i}
 	\have[n]{a}{\meta{A}\subs{\meta{b}}{\meta{x}}}
 	\have[\ ]{ea1}{\meta{A}\subs{\meta{a}}{\meta{x}}} \ide{e,a}
-\end{proof} This schematic proof actually justifies this derived rule, to save time: \factoidbox{
+\end{proof} This schematic proof actually justifies this derived rule, to save time:\label{id.es} \factoidbox{
 	\begin{proof}
 		\have[m]{e}{\meta{a}=\meta{b}}
 	\have[n]{a}{\meta{A}\subs{\meta{b}}{\meta{x}}}
