--- a/forallx-adl-frontmatter.tex
+++ b/forallx-adl-frontmatter.tex
@@ -35,7 +35,11 @@ This version of \forallx-Adelaide is current as of \today.
 
 \medskip
 
-This book is a derivative work created by Antony Eagle, based upon Tim Button's Cambridge version of P.D.\ Magnus's \forallx\ (version 1.29). There are pervasive changes, big and small.  You can find the most up to date version of this work at \href{https://github.com/antonyeagle/forallx-adl}{\nolinkurl{github.com/antonyeagle/forallx-adl}}. The most up-to-date version of \forallx\ Cambridge is available at \href{https://github.com/OpenLogicProject/forallx-cam}{\nolinkurl{github.com/OpenLogicProject/forallx-cam}}; Magnus' original is available at \href{http://fecundity.com/logic}{\nolinkurl{fecundity.com/logic}}. The Cambridge version was released under a Creative Commons license (Attribution 4.0), as is the present text.\medskip 
+This book is a derivative work created by Antony Eagle, based upon Tim Button's 2016 Cambridge version of P.D.\ Magnus's \forallx\ (version 1.29). There are pervasive changes, big and small, substantive and cosmetic. You can find the most up to date version of this work at \href{https://github.com/antonyeagle/forallx-adl}{\nolinkurl{github.com/antonyeagle/forallx-adl}}. 
+
+The most up-to-date version of \forallx\ Cambridge is available at \href{https://github.com/OpenLogicProject/forallx-cam}{\nolinkurl{github.com/OpenLogicProject/forallx-cam}} – this has diverged noticeably from the 2016 version by now. Magnus' original is available at \href{http://fecundity.com/logic}{\nolinkurl{fecundity.com/logic}}. 
+
+This book, like its predecessors, is released under a Creative Commons license (Attribution 4.0).\medskip 
 
 \begin{center}
 	\includegraphics{cc-by.png} 
