--- a/forallx-adl-what.tex
+++ b/forallx-adl-what.tex
@@ -88,14 +88,7 @@ It is worth pausing to ask what makes the argument so weak. In fact, there are t
 
 What about the main argument discussed in §\ref{s:Arguments}? The premises of this argument might well be false. It might be sunny outside; or it might be that you can avoid getting soaked without taking an umbrella. But even if both premises were true, it does not necessarily show you that you should take an umbrella. Perhaps you enjoy walking in the rain, and you would like to get soaked. So, even if both premises were true, the conclusion might nonetheless be false. (If we were to add the formerly tacit assumption that you do not wish to get soaked as a further premise, then the premises taken together would provide support for the conclusion.)
 
-%Consider a third argument:
-%	\begin{earg}
-%		\item[] You are reading this book.
-%		\item[] This is a logic book.
-%		\item[So:] You are a logic student.
-%	\end{earg}
-%This is not a terrible argument. Both of the premises are true. And most people who read this book are logic students. Yet, it is possible for someone besides a logic student to read this book. If your roommate picked up the book and thumbed through it, they would not immediately become a logic student. So the premises of this argument, even though they are true, do not guarantee the truth of the conclusion.
-%
+
 The general point is as follows. For any argument, there are two ways that it might go wrong:
 	\begin{enumerate}
 		\item One or more of the premises might be false. 
@@ -129,7 +122,7 @@ Consider another argument:
 		\item[] This is a logic book.
 		\item[So:] You are a logic student.
 	\end{earg}
-This is not a terrible argument. Both of the premises are true. And most people who read this book are logic students. Yet, it is possible for someone besides a logic student to read this book. If your roommate picked up the book and thumbed through it, they would not immediately become a logic student. So the premises of this argument, even though they are true, do not guarantee the truth of the conclusion. This is not a conclusive argument. 
+This is not a terrible argument. Both of the premises are true. And most people who read this book are logic students. Yet, it is possible for someone besides a logic student to read this book. If your housemate picked up the book and thumbed through it, they would not immediately become a logic student. So the premises of this argument, even though they are true, do not guarantee the truth of the conclusion. This is not a conclusive argument. 
 
 The crucial thing about a conclusive argument is that it is impossible, in a very strict sense, for the premises to be true whilst the conclusion is false. Consider this example:
 	\begin{earg}
