--- a/forallx-adl-prooffol.tex
+++ b/forallx-adl-prooffol.tex
@@ -553,7 +553,7 @@ For each of the following arguments: If it is valid in \FOL, give a proof. If it
 \end{earg}
 
 
-\chapter{Derived rules in \textnormal{\FOL}}\label{s:CQ}
+\chapter{Derived rules for \textnormal{\FOL}}\label{s:CQ}
 
 In this section, we shall add some additional rules to the basic rules of the previous section. These govern the interaction of quantifiers and negation. But they are no substantive addition to our basic rules: for each of the proposed additions, it can be shown that their role in any proof can be wholly emulated by some suitable applications of our basic rules from §\ref{s:BasicFOL}. (The point here is as in §\ref{s:Derived}.)
  
