--- a/forallx-adl-quickreference.tex
+++ b/forallx-adl-quickreference.tex
@@ -239,6 +239,7 @@ One way to say `there are exactly $n$ Fs' is to conjoin two of the symbolization
 
 \begin{proof}
 	\have[m]{a}{\meta{A}}
+	\have[\ ]{}{\vdots}
 	\have[\ ]{c}{\meta{A}} \by{R}{a}
 \end{proof}
 
