--- a/forallx-adl-fol.tex
+++ b/forallx-adl-fol.tex
@@ -17,7 +17,7 @@ To symbolise it in \TFL, we might offer a symbolisation key:
 \end{ekey}
 And the argument itself becomes:
 $$L, A \ttherefore F$$
-This is \emph{invalid} in \TFL – there is a valuation on which the premises are true and the conclusion false. But the original English argument is clearly valid.
+This is \emph{invalid} in \TFL\ – there is a valuation on which the premises are true and the conclusion false. But the original English argument is clearly valid.
 
 The problem is not that we have made a mistake while symbolising the argument. This is the best symbolisation we can give in \TFL. The problem lies with \TFL\ itself. `All logicians wear funny hats' is about both logicians and hat-wearing. By not retaining this in our symbolisation, we lose the connection between Willard's being a logician and Willard's wearing a hat.
 
