--- a/forallx-adl-tfl.tex
+++ b/forallx-adl-tfl.tex
@@ -108,7 +108,7 @@ But it is important to understand that whatever structure an English sentence mi
 
 
 \chapter{Connectives}\label{s:TFLConnectives}
-In the previous section, we considered symbolising fairly basic English sentences with atomic sentences of \TFL. This leaves us wanting to deal with the English expressions `and', `or', `not', and so forth. These are \emph{connectives} – they can be used to form new sentences out of old ones. And in \TFL, we shall make use of logical connectives to build complex sentences from atomic components. There are five logical connectives in \TFL, inspired by the English structural words we have encountered so far. This table summarises them, and they are explained throughout this section. 
+In the previous section, we considered symbolising fairly basic English sentences with atomic sentences of \TFL. This leaves us wanting to deal with the English expressions `and', `or', `not', and so forth. These are \define{connectives} – they can be used to form new sentences out of old ones. And in \TFL, we shall make use of logical connectives to build complex sentences from atomic components. There are five logical connectives in \TFL, inspired by the English structural words we have encountered so far. This table summarises them, and they are explained throughout this section. 
 
 	\begin{table}[h]
 	\center
@@ -346,7 +346,7 @@ We should not take `unless' to always have the stronger biconditional form. Cons
 \end{earg} This certainly says that if we fail to capture the castle, it will have been because of that pesky Duke. But what if the Duke tries \emph{but fails} to stop us? We might in that case capture the castle even though he tried to stop us. While \ref{unless4} is still true, it is not the case that `if the Duke tries to stop us, we won't capture the castle' is true.
 
 \keyideas{
-	\item \TFL\ features five connectives: `$\eand$' (`and'), `$eor$' (`or'), `$\enot$' (`not'), `$\eif$' (`if …, then …') and `$\eiff$' (`if and only if' or `iff').
+	\item \TFL\ features five connectives: `$\eand$' (`and'), `$\eor$' (`or'), `$\enot$' (`not'), `$\eif$' (`if …, then …') and `$\eiff$' (`if and only if' or `iff').
 	\item These connectives, alone and in combination, can be used to symbolise many English constructions, even some which do not feature the English counterparts of the connectives – as when we approached the symbolisation of sentences involving `unless'.
 	\item Figuring out how to symbolise a given natural language sentence might not be straightforward, however, as in the cases of `A if B' and `A only if B', which have quite different symbolisations into \TFL. `A unless B' is perhaps even trickier, being sometimes used ambiguously by English speakers and being able to be symbolised in many good ways.
 }
