--- a/forallx-adl-truthtables.tex
+++ b/forallx-adl-truthtables.tex
@@ -186,7 +186,7 @@ The crucial point is that sentences \ref{brownwins1} and \ref{brownwins2} employ
 
 The point to take away from this is that subjunctive conditionals cannot be tackled using `$\eif$'. This is not to say that they cannot be tackled by any formal logical language, only that \TFL\ is not up to the job.\footnote{There are in fact logical treatments of counterfactuals, the most influential of which is David Lewis (1973) \emph{Counterfactuals}, Blackwell.}
 
-So the \eif connective of \TFL is at best able to model the indicative conditional of English, as in \ref{indcond}.
+So the `$\eif$' connective of \TFL\ is at best able to model the indicative conditional of English, as in \ref{indcond}.
 
 In fact there are even difficulties with indicatives in \TFL. I shall say a little more about those difficulties in §\ref{s:ParadoxesOfMaterialConditional} and in §\ref{cond.proof}. For now, I shall content myself with the observation that `$\eif$' is the only plausible candidate for a truth-functional conditional, but that many English conditionals cannot be represented adequately using `$\eif$'. \TFL\ is an intrinsically limited language. But this is only a problem if you try to use it to do things it wasn't designed to do.
 
