--- a/forallxadl.sty
+++ b/forallxadl.sty
@@ -14,6 +14,7 @@
 \setmonofont[Scale=MatchLowercase]{Consolas}
 \usepackage[math-style=ISO,mathbf=sym,bold-style=TeX,mathsf=text]{unicode-math}
 \setmathfont[Scale=MatchLowercase]{Cambria Math}
+\setmathfont[range=up/{num},Numbers=OldStyle]{Constantia}
 %\setmathfont[Scale=MatchLowercase]{XITS Math}[range={"2500-"26FF,"2B00-"2BFF}] 
 \newfontfamily\cjkfont{Kaiti SC Regular}
 
