--- a/forallxadl.tex
+++ b/forallxadl.tex
@@ -13,28 +13,8 @@
 \frontmatter
 \include{forallx-adl-frontmatter}
 
-\newpage
-\tableofcontents*
-
-\chapter*{How to use this book}
-
-This book has been designed for use in conjunction with the University of Adelaide course \textsc{phil} 1110 \emph{Introduction to Logic}. But it is suitable for self-study as well. I have included a number of features to assist your learning. \begin{itemize}
-	\item \forallx\ is divided into seven chapters, each further divided into sections and subsections. The sections are continuously numbered. \begin{itemize}
-		\item Chapter \ref{ch.intro} gives an overview of how I understand the project of formal logic;
-		\item Chapters \ref{ch.TFL}–\ref{ch.TruthTables} cover sentential or truth-functional logic;
-		\item Chapters \ref{ch.FOL}–\ref{ch.semantics} cover quantified or predicate logic;
-		\item and Chapters \ref{ch.NDTFL}–\ref{ch.NDFOL} cover the formal proof systems for our logical languages.
-	\end{itemize}
-	\item The book contains many cross-references to other sections. So a reference to `§\ref{s.sentencesTFL}' indicates that you should consult section 6, subsection 2 – you will find this on page \pageref{s.sentencesTFL}. Cross-references are hyperlinked, as are entries in the table of contents.
-	\item Logical ideas and notation are pretty ubiquitous in philosophy, and there are a lot of different systems. We cannot cover all the alternatives, but some indication of other terminology and notation is contained in Appendix \ref{app.notation}.
-	\item A quick reference to many of the aspects of the logical systems I introduce can be found in Appendix \ref{ch.qr}.
-	\item When I first use a new piece of technical terminology, it is introduced by writing it in small caps, \textsc{like this}. You can find an index of defined terms in Appendix \ref{app.index}.
-	\item Each chapter in the book concludes with a box labelled `Key Ideas in §$n$'. These are not a summary of the chapter, but contain some indication of what I regard as the main ideas that you should be taking away from your reading of the chapter. 
-	\item The book is the product of a number of authors. `I' doesn't always mean me, but `you' mostly means you, the reader, and `we' mostly means you and me.
-\end{itemize}
-I appreciate any comments or corrections: \href{mailto:antony.eagle@adelaide.edu.au}{\nolinkurl{antony.eagle@adelaide.edu.au}}.
-
-\mainmatter \renewcommand{\thefigure}{\thechapter.\arabic{figure}}
+\mainmatter 
+\renewcommand{\thefigure}{\thechapter.\arabic{figure}}
 \include{forallx-adl-what}
 \include{forallx-adl-tfl}
 \include{forallx-adl-truthtables}
