added tikz matrices

--- a/forallxadl.sty
+++ b/forallxadl.sty
@@ -827,7 +827,7 @@
 %   B. To draw graphs illustrating small finite interpretations. 
 % All these drawings are done using tikz
 \usepackage{tikz}
-\usetikzlibrary{arrows,positioning,shapes} 
+\usetikzlibrary{arrows,positioning,shapes,matrix,calc} 
 
 \tikzset{phantom_shape/.style={thick, fill=black!0, minimum width=30pt, minimum height=30pt}, % TB: renders the shape invisible
 		grey_shape/.style={thick, fill=black!20, draw, minimum width=30pt, minimum height=30pt}, % TB: renders a light grey shape with a black outline
