added labels to sections

--- a/forallx-adl-interpretations.tex
+++ b/forallx-adl-interpretations.tex
@@ -618,8 +618,7 @@ One sentence of this class is nevertheless a logical truth: the claim that somet
 
 
 
-\chapter{Demonstrating Consistency and Invalidity}
-\label{sec.UsingModels}
+\chapter{Demonstrating Consistency and Invalidity}\label{sec.UsingModels}
 
 \section{Logical truths and contradictions}
 Suppose we want to show that `$\exists xAxx \eif Bd$' is \emph{not} a logical truth. This requires showing that the sentence is not true in every interpretation; i.e.,\ that it is false in some interpretation. If we can provide just one interpretation in which the sentence is false, then we will have shown that the sentence is not a logical truth.
@@ -810,7 +809,7 @@ Show that the following arguments are invalid:
 \item $\forall x(Dx \eif \exists y Tyx) \ttherefore \exists y \exists z\ \enot y= z$
 \end{earg}
 
-\chapter{Reasoning about all interpretations: demonstrating inconsistency and validity}
+\chapter{Reasoning about all interpretations: demonstrating inconsistency and validity}\label{s:All.Interp}
 
 \section{Logical truths and contradictions}
 We can show that a sentence is \emph{not} a logical truth just by providing one carefully specified interpretation: an interpretation in which the sentence is false. To show that something is a logical truth, on the other hand, it would not be enough to construct ten, one hundred, or even a thousand interpretations in which the sentence is true. A sentence is only a logical truth if it is true in \emph{every} interpretation, and there are infinitely many interpretations. We need to reason about all of them, and we cannot do this by dealing with them one by one!
