index on master: e2a12ec added labels to sections

--- a/forallx-adl-prooftfl.tex
+++ b/forallx-adl-prooftfl.tex
@@ -1242,7 +1242,7 @@ Give a proof for each of the following arguments:
 \end{earg}
 
 
-\chapter{Some philosophical issues about conditionals and meaning}
+\chapter{Some philosophical issues about conditionals and meaning}\label{s:philosophy}
 
 
 \section{Conditional introduction and the English conditional} \label{cond.proof}%Æ added
