--- a/forallx-adl-fol.tex
+++ b/forallx-adl-fol.tex
@@ -809,8 +809,7 @@ Consider the following symbolisation key:
 \end{ekey}
 If we hold fixed this assignment of meanings to the predicates, why is it possible that `$\exists x \forall y Pxy$' is true, but not possible that  `$\exists x \forall y Txy$' is true?
 
-\chapter{Identity}
-\label{sec.identity}
+\chapter{Identity}\label{sec.identity}
 
 Consider this sentence:
 \begin{earg}
