--- a/forallx-adl-truthtables.tex
+++ b/forallx-adl-truthtables.tex
@@ -348,7 +348,7 @@ Offer complete truth tables for each of the following:
 If you want additional practice, you can construct truth tables for any of the sentences and arguments in the exercises for the previous chapter.
 
 
-\chapter{Semantic concepts}
+\chapter{Semantic concepts}\label{s:Semantic.concepts}
 In §\ref{s:valuations}, we introduced the idea of a valuation and showed how to determine the truth value of any \TFL\ sentence on any valuation using a truth table in the remainder of the chapter. In this section, we shall introduce some related ideas, and show how to use truth tables to test whether or not they apply.
 
 
@@ -672,7 +672,7 @@ Is this principle correct? Explain your answer.
 
 
 
-\chapter{Truth table shortcuts}
+\chapter{Truth table shortcuts}\label{s:shortcuts}
 With practice, you will quickly become adept at filling out truth tables. In this section, I want to give you some permissible shortcuts to help you along the way. 
 
 \section{Working through truth tables}
