set up matrix of dependencies

--- a/forallx-adl-frontmatter.tex
+++ b/forallx-adl-frontmatter.tex
@@ -87,17 +87,17 @@ I appreciate any comments or corrections: \href{mailto:antony.eagle@adelaide.edu
     ]
 {
 §\ref{s:Arguments} & & & & \\
-§\ref{s:Valid} & §15 & & & \\ 
-§\ref{s:BasicNotions} & §16 & §\ref{s:Interpretations} & & \\
-§\ref{s:firststeps} & §17 & §\ref{s:TruthFOL} & §\ref{s:NDVeryIdea}  & \\
-§\ref{s:TFLConnectives} & §18 & §\ref{FOL.semantics} & §\ref{c:ass} & \\
-§\ref{s:TFLSentences} & §19 & §\ref{sec.UsingModels} & §\ref{s:BasicTFLns} & \\
-§\ref{s:UseMention} &     & §\ref{s:All.Interp} & §\ref{s:BasicTFLs} & §\ref{s:philosophy} \\
-§8 & §25 &     & §\ref{s:ProofTheoreticConcepts} & \\
-§9 & 	 & §\ref{s:Derived} & §\ref{c:proof.strat} & \\
-§10 & 	 & §\ref{s:alternates} & §35 & §36 \\
-§11 & §12 &    & §37 & \\
-§14 & §13 &    & §38 & \\
+§\ref{s:Valid} & §\ref{s:FOLBuildingBlocks} & & & \\ 
+§\ref{s:BasicNotions} & §\ref{s:MoreMonadic} & §\ref{s:FOLSentences} & & \\
+§\ref{s:firststeps} & §\ref{s:MultipleGenerality} & §\ref{s:Interpretations} & §\ref{s:NDVeryIdea}  & \\
+§\ref{s:TFLConnectives} & §\ref{sec.identity} & §\ref{s:TruthFOL} & §\ref{c:ass} & \\
+§\ref{s:TFLSentences} & §\ref{subsec.defdesc} & §\ref{FOL.semantics} & §\ref{s:BasicTFLns} & \\
+§\ref{s:UseMention} &     & §\ref{sec.UsingModels} & §\ref{s:BasicTFLs} & §\ref{s:philosophy} \\
+§\ref{s:TruthFunctionality} & §\ref{s:All.Interp} &     & §\ref{s:ProofTheoreticConcepts} & \\
+§\ref{s:CompleteTruthTables} & 	 & §\ref{s:Derived} & §\ref{c:proof.strat} & \\
+§\ref{s:Semantic.concepts} & 	 & §\ref{s:alternates} & §\ref{s:BasicFOL} & §\ref{s:CQ} \\
+§\ref{c:entvalid} & §\ref{s:shortcuts} &    & §\ref{ch.identity} & \\
+§\ref{s:expressiveness} & §\ref{s:PartialTruthTable} &    & §\ref{sec:soundcomp} & \\
     };
 	\end{tikzpicture}
 \end{center}
