--- a/forallx-adl-frontmatter.tex
+++ b/forallx-adl-frontmatter.tex
@@ -74,7 +74,7 @@ This book has been designed for use in conjunction with the University of Adelai
 \end{itemize}
 I appreciate any comments or corrections: \href{mailto:antony.eagle@adelaide.edu.au}{\nolinkurl{antony.eagle@adelaide.edu.au}}.
 
-\begin{figure} \begin{center}{\small
+\begin{figure} ~\hspace{-0.8cm}{\small
 \begin{tikzpicture}[sibling distance=10em]
  \matrix (depend)
  [
@@ -117,6 +117,5 @@ I appreciate any comments or corrections: \href{mailto:antony.eagle@adelaide.edu
 (depend-11-1) edge [out=150,in=188] (depend-4-3)
     ;
 	\end{tikzpicture}}
-\end{center}
 	\caption{How the sections depend on one another. \label{fig:depend}}
 \end{figure}
