suppress page number on dependency diagram page

--- a/forallx-adl-frontmatter.tex
+++ b/forallx-adl-frontmatter.tex
@@ -74,7 +74,7 @@ This book has been designed for use in conjunction with the University of Adelai
 \end{itemize}
 I appreciate any comments or corrections: \href{mailto:antony.eagle@adelaide.edu.au}{\nolinkurl{antony.eagle@adelaide.edu.au}}.
 
-\begin{figure} ~\hspace{-0.8cm}{\small
+\newpage \thispagestyle{empty}\begin{figure} ~\hspace{-0.8cm}{\small
 \begin{tikzpicture}[sibling distance=10em]
  \matrix (depend)
  [
