typos, errors in proof formatting, fixed hyperref pageref anchors

--- a/forallx-adl-interpretations.tex
+++ b/forallx-adl-interpretations.tex
@@ -407,7 +407,7 @@ is a substitution instance of
 	$$\forall y \exists x (Ryx \eiff Fx)$$
 with the instantiating name `$e$', because  `$\exists x (Ryx \eiff Fx)$'$\subs{e}{y}$ turns out to be `$\exists x (Rex \eiff Fx)$'.
 
-Armed with this notation, the rough idea is as follows. The sentence $\forall \meta{x}\meta{A}$ will be true iff $\meta{A}\subs{\meta{c}}{\meta{x}}$ is true no matter what object (in the domain) we name with $\meta{c}$. Similarly, the sentence $\exists \meta{x}\meta{A}$ will be true iff there is \emph{some} way to assign the name $\meta{c}$ to an object that makes $\meta{A}\subs{\meta{c}}{\meta{x}}$ true. More precisely, we stipulate:\label{quant.tcs.precise}
+Armed with this notation, the rough idea is as follows. The sentence $\forall \meta{x}\meta{A}$ will be true iff $\meta{A}\subs{\meta{c}}{\meta{x}}$ is true no matter what object (in the domain) we name with $\meta{c}$. Similarly, the sentence $\exists \meta{x}\meta{A}$ will be true iff there is \emph{some} way to assign the name $\meta{c}$ to an object that makes $\meta{A}\subs{\meta{c}}{\meta{x}}$ true. More precisely, we stipulate:\phantomsection\label{quant.tcs.precise}
 	\factoidbox{\begin{itemize}
 		\item 		$\forall \meta{x}\meta{A}$ is true in an interpretation \textbf{iff}\\ 
 		$\meta{A}\subs{\meta{c}}{\meta{x}}$ is true in \emph{every} interpretation that extends the original interpretation by assigning an object to some previously uninterpreted name $\meta{c}$ not appearing in $\meta{A}$ (without changing the original interpretation in any other way).
@@ -831,7 +831,7 @@ This is quite longwinded, but, as things stand, there is no alternative. In orde
 
 But sometimes we can draw a conclusion about some way all interpretations must be, by considering a hypothetical interpretation which isn't that way, and showing that hypothesis leads to trouble. Here is an example. \begin{quote}
 	Suppose there were an interpretation which makes `$a≠b \eif \enot \exists x(x=a \eand x=b)$' false. Then while `$a≠b$' is true on that interpretation, `$\enot \exists x(x=a \eand x=b)$' must be false. So `$\exists x(x=a \eand x=b)$' must be true; and hence it has some true substitition instance with some previously uninterpreted name `$c$' as the instantiating name: `$c=a \eand c=b$' is true. But then it must also be that `$a=b$' is true, which contradicts our original supposition that `$a≠b$' is true on this intepretation. So there can be no such interpretation, and hence the sentence cannot be false on any interpretation and must be a logical truth.
-\end{quote} This is an example of \define{\emph{reductio}} reasoning\label{reductio}: we assume something, and derive some absurdity or contradiction; we then conclude that our assumption is to be rejected. It is often easier to show that all Fs have a property by deriving an absurdity from the assumption that some F lacks the property, than it is to show it `directly' by considering each F in turn. This is a powerful technique, used widely in mathematics and elsewhere.
+\end{quote} This is an example of \define{\emph{reductio}} reasoning\phantomsection\label{reductio}: we assume something, and derive some absurdity or contradiction; we then conclude that our assumption is to be rejected. It is often easier to show that all Fs have a property by deriving an absurdity from the assumption that some F lacks the property, than it is to show it `directly' by considering each F in turn. This is a powerful technique, used widely in mathematics and elsewhere.
 
 \section{Other cases}
 Similar points hold of other cases too. Thus, we must reason about all interpretations if we want to show:
