--- a/forallx-adl-prooftfl.tex
+++ b/forallx-adl-prooftfl.tex
@@ -44,7 +44,7 @@ Natural deduction systems promise to give us a better insight – or at least, a
 
 The move to natural deduction might be motivated by more than the search for insight. It might also be motivated by \emph{practicality}. Consider:
 	$$A_1 \eif C_1 \ttherefore (A_1 \eand A_2) \eif (C_1 \eor C_2).$$
-To test this argument for validity, you might use a 16-line truth table. If you do it correctly, then you will see that there is no line on which all the premises are true and on which the conclusion is false. So you will know that the argument is valid. (But, as just mentioned, there is a sense in which you will not know \emph{why} the argument is valid.) But now consider:\label{longtt}
+To test this argument for validity, you might use a 16-line truth table. If you do it correctly, then you will see that there is no line on which all the premises are true and on which the conclusion is false. So you will know that the argument is valid. (But, as just mentioned, there is a sense in which you will not know \emph{why} the argument is valid.) But now consider:\phantomsection\label{longtt}
 	\begin{align*}
 		A_1 \eif C_1 \ttherefore\ & (A_1 \eand A_2 \eand A_3 \eand A_4 \eand A_5 \eand A_6 \eand A_7 \eand A_8 \eand A_9 \eand A_{10}) \eif \phantom{(}\\
 				&(C_1 \eor C_2 \eor C_3 \eor C_4 \eor C_5 \eor C_6 \eor C_7 \eor C_8 \eor C_9 \eor C_{10}).
@@ -101,7 +101,7 @@ Note that we have numbered the premise, since we shall want to refer back to it.
 
 Note also that we have drawn a line underneath the premise. Everything written above the line is an \emph{assumption}. Everything written below the line will either be something which follows from the assumptions we have already made, or it will be some new assumption. 
 
-The vertical line at the side marks the scope of this assumption: any subsequent sentence which is adjacent to a continuation of this vertical line is understood to lie in the \define{range} of this assumption. We might call these vertical lines \define{assumption lines}. If some line in a proof is in the range of an assumption, we will say that it is an \define{active assumption} at that point in the proof. If we are going to write down some sentence that follows from an assumption, we will involve first extending the corresponding assumption line to indicate that it rests on this assumption, or at least is playing a role in the argument connected with this assumption. As we will see, not every sentence in the range of an assumption will intuitively \emph{depend} on the assumption, but many will. \label{nondependence}
+The vertical line at the side marks the scope of this assumption: any subsequent sentence which is adjacent to a continuation of this vertical line is understood to lie in the \define{range} of this assumption. We might call these vertical lines \define{assumption lines}. If some line in a proof is in the range of an assumption, we will say that it is an \define{active assumption} at that point in the proof. If we are going to write down some sentence that follows from an assumption, we will involve first extending the corresponding assumption line to indicate that it rests on this assumption, or at least is playing a role in the argument connected with this assumption. As we will see, not every sentence in the range of an assumption will intuitively \emph{depend} on the assumption, but many will. \phantomsection\label{nondependence}
 
 We are hoping to conclude that `$\enot A \eand \enot B$'; so we are hoping ultimately to conclude our proof with
 \begin{proof}
@@ -300,7 +300,7 @@ Here is an illustration of the rules we have so far in action, applied to this i
 	\have{e}{Q}\ce{c,a}
 	\have{f}{R}\ce{d,a}
 	\have{g}{(R \eand Q)}\ai{f,e}
-\end{proof}\label{proof.within}
+\end{proof}\phantomsection\label{proof.within}
 
 The correctness of our proof rule of conditional elimination is supported by the easily demonstrated validity of the corresponding entailment: \begin{itemize}
 	\item  $\meta{A}, \meta{A}\eif\meta{B}\entails \meta{B}$.
@@ -461,7 +461,7 @@ When we start a subproof, we draw another vertical line (to the right of any exi
 What will be new in this section is that some rules take us \emph{back out} of a subproof. So the rules we will now consider are quite different from the rules covered in §\ref{s:BasicTFLns}, none of which have this feature of being able to escape from a previously introduced assumption.
 
 When we are working within a subproof, we can refer to the additional assumption that we made in introducing the subproof, and to anything that we obtained from our original assumptions. (After all, those original assumptions are still in effect.) But at some point, we shall want to stop working with the additional assumption: we shall want to return from the subproof to the main proof. To indicate that we have returned to the main proof, the vertical line for the subproof comes to an end. At this point, we say that the subproof is \define{closed}. Having closed a subproof, we have set aside the additional assumption, so it will be illegitimate to draw upon anything that depends upon that additional assumption. This has been implicit in our discussion all along, but it is good to make it very clear:
-\factoidbox{\label{subproof.rule}Any point in a natural deduction proof is in the range of some currently active assumptions, and the natural deduction rules can be applied only to sentences which do not rely on any other assumptions than those.
+\factoidbox{\phantomsection\label{subproof.rule}Any point in a natural deduction proof is in the range of some currently active assumptions, and the natural deduction rules can be applied only to sentences which do not rely on any other assumptions than those.
 
 Equivalently, any rule can be applied to any earlier lines in a proof, \emph{except} for those lines which occur within a closed subproof. }
 Closing a subproof is called \define{discharging} the assumptions of that subproof. So we can put the point this way: \emph{at no stage of a proof can you apply a rule to a sentence that occurs only in the range of an already discharged assumption}. 
@@ -479,7 +479,7 @@ Even without any new rules, the idea of opening subproofs by making new assumpti
 
 \section{Conditional introduction}\label{condint}
 
-To illustrate the use of subproofs, we will begin with the rule of conditional introduction. It is fairly easy to motivate informally.\label{ci.motivate} The following argument in English should be valid:
+To illustrate the use of subproofs, we will begin with the rule of conditional introduction. It is fairly easy to motivate informally.\phantomsection\label{ci.motivate} The following argument in English should be valid:
 	\begin{quote}
 		Ludwig is reactionary. Therefore if Ludwig is libertarian, then Ludwig is both reactionary \emph{and} libertarian.
 	\end{quote}
@@ -551,7 +551,7 @@ We start by listing \emph{both} of our premises. Then, since we want to arrive a
 	\close
 \end{proof}
 Note that we have made `$P$' available, by treating it as an additional assumption. But now, we can use {\eif}E on the first premise. This will yield `$Q$'. And we can then use {\eif}E on the second premise. So, by assuming `$P$' we were able to prove `$R$', so we apply the {\eif}I rule – discharging `$P$' – and finish the proof. Putting all this together, we have:
-\label{HSproof}
+\phantomsection\label{HSproof}
 \begin{proof}
 	\hypo{pq}{P \eif Q}
 	\hypo{qr}{Q \eif R}
@@ -573,7 +573,7 @@ Let's consider another example, this one demonstrating why reiteration can be so
 \end{proof} Note that strictly speaking we needn't have used reiteration here: the assumption of `$P$' remains active at line 2, so technically we could apply {\eif}I to close the subproof and introduce the conditional immediately after line 2. But the use of reiteration makes it much clearer what is going on in the proof – even though all it does it repeat the earlier assumption and remind us that it is still an active assumption. 
 
 
-We now have all the rules we need to show that the argument on page \pageref{longtt} is valid. Here is the six line proof,  some 175,000 times shorter  than the corresponding truth table:\label{ndshort}
+We now have all the rules we need to show that the argument on page \pageref{longtt} is valid. Here is the six line proof,  some 175,000 times shorter  than the corresponding truth table:\phantomsection\label{ndshort}
 
 
 \hspace{-3cm}	\begin{minipage}{\textwidth}\small\begin{proof}
