--- a/forallxadl.sty
+++ b/forallxadl.sty
@@ -798,14 +798,15 @@
 
 \setlength{\columnsep}{2em} % Sets 2em space between columns when calling multicol 
 
-\definecolor{darkred}{rgb}{0.5,0,0} % TB: used to color links in red
+\definecolor{orange}{rgb}{0.8,0.4,0.2} % Æ: used to color links in orange
 \newcommand\myanswer[1]{\textcolor{blue}{#1}} % TB: puts model answers in blue
 
 % TB: information originally in the main body; but it is style information, so I have included it here. Modified Æ
 \hypersetup{pdfinfo={Title={forall x: Adelaide Version}, Author={P.D. Magnus, Tim Button, Antony Eagle}, Subject={An open access introductory textbook in formal logic}, Keywords={truth-functional logic, propositional logic, predicate logic, first-order logic, natural deduction, fitch}}, %
 %	bookmarks={true}, %
 	colorlinks={true}, %
-	linkcolor={darkred},
+	linkcolor={orange},
+  urlcolor={orange},
 	pdfdisplaydoctitle={true},
   unicode={true},
   pdfencoding={auto},
